--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ distro==1.9.0
 dnspython==2.7.0
 executing==2.0.1
 Flask==3.1.0
+Flask-PyMongo==2.3.0
 frozenlist==1.5.0
 greenlet==3.1.1
 h11==0.14.0
