--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-aiohappyeyeballs==2.4.3
-aiohttp==3.11.7
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.8
 aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.6.2.post1
+appnope==0.1.4
 asttokens==2.4.1
 attrs==24.2.0
 blinker==1.9.0
@@ -18,12 +19,10 @@ distro==1.9.0
 dnspython==2.7.0
 executing==2.0.1
 Flask==3.1.0
-Flask-PyMongo==2.3.0
 frozenlist==1.5.0
-greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.7
-httpx==0.27.2
+httpx==0.28.0
 httpx-sse==0.4.0
 idna==3.10
 ipykernel==6.29.5
@@ -31,17 +30,17 @@ ipython==8.26.0
 itsdangerous==2.2.0
 jedi==0.19.1
 Jinja2==3.1.4
-jiter==0.7.1
+jiter==0.8.0
 jsonpatch==1.33
 jsonpointer==3.0.0
 jupyter_client==8.6.2
 jupyter_core==5.7.2
-langchain==0.3.8
+langchain==0.3.9
 langchain-community==0.3.8
 langchain-core==0.3.21
-langchain-openai==0.2.9
+langchain-openai==0.2.10
 langchain-text-splitters==0.3.2
-langsmith==0.1.145
+langsmith==0.1.147
 MarkupSafe==3.0.2
 marshmallow==3.23.1
 matplotlib-inline==0.1.7
@@ -49,26 +48,27 @@ multidict==6.1.0
 mypy-extensions==1.0.0
 nest-asyncio==1.6.0
 numpy==1.26.4
-openai==1.55.0
+openai==1.55.3
 orjson==3.10.12
 packaging==24.1
 parso==0.8.4
-pinecone==5.4.0
-pinecone-plugin-inference==2.0.1
+pexpect==4.9.0
+pinecone==5.4.1
+pinecone-plugin-inference==3.0.0
 pinecone-plugin-interface==0.0.7
 platformdirs==4.2.2
 prompt_toolkit==3.0.47
 propcache==0.2.0
 psutil==5.9.8
+ptyprocess==0.7.0
 pure-eval==0.2.2
-pydantic==2.10.1
+pydantic==2.10.2
 pydantic-settings==2.6.1
 pydantic_core==2.27.1
 Pygments==2.18.0
 pymongo==4.10.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-pywin32==306
 PyYAML==6.0.2
 pyzmq==26.0.3
 regex==2024.11.6
@@ -81,11 +81,12 @@ stack-data==0.6.3
 tenacity==9.0.0
 tiktoken==0.8.0
 tornado==6.4.1
-tqdm==4.67.0
+tqdm==4.67.1
 traitlets==5.14.3
 typing-inspect==0.9.0
 typing_extensions==4.12.2
 urllib3==2.2.3
+uuid==1.30
 wcwidth==0.2.13
 Werkzeug==3.1.3
 yarl==1.18.0
